fix: align back button with breadcrumbs using space-between in detail pages

--- a/client/src/pages/admin/leagues/LeagueDetails.module.scss
+++ b/client/src/pages/admin/leagues/LeagueDetails.module.scss
@@ -13,7 +13,7 @@
 .titleRow {
   display: flex;
   align-items: center;
-  gap: $space-sm;
+  justify-content: space-between;
   margin: 0 0 $space-xl;
 }
 
